--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Music App Mobile UI/UX Design</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@vetixy/circular-std@1.0.0/dist/index.min.css">
@@ -82,7 +82,7 @@
     }
 
     .container {
-      min-height: 100vh;
+      min-height: 100dvh;
       padding-bottom: var(--nav);
     }
 
@@ -428,7 +428,7 @@
     }
 
     .detail-view {
-      min-height: 100vh;
+      min-height: 100dvh;
       background: var(--bg);
       display: none;
       padding-bottom: var(--nav);
@@ -665,7 +665,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      height: 100dvh;
       justify-content: space-between;
     }
 
@@ -881,7 +881,7 @@
     }
 
     .search-view {
-      min-height: 100vh;
+      min-height: 100dvh;
       background: var(--bg);
       display: none;
       padding-bottom: var(--nav);
@@ -895,13 +895,12 @@
       padding: var(--s4) var(--pad);
       display: flex;
       flex-direction: column;
-      gap: var(--s4);
+      gap: var(--s2);
     }
 
     .search-title {
       font-size: var(--xl);
       font-weight: var(--bold);
-      margin-bottom: var(--s2);
     }
 
     .search-input-container {
@@ -1433,29 +1432,6 @@
 
           lastScrollY = currentScrollY;
         });
-
-        const playerView = document.getElementById('playerView');
-        if (playerView) {
-          let playerStartY = 0;
-
-          playerView.addEventListener('touchstart', (e) => {
-            playerStartY = e.touches[0].clientY;
-          }, { passive: true });
-
-          playerView.addEventListener('touchmove', (e) => {
-            const playerCurrentY = e.touches[0].clientY;
-            const deltaY = playerCurrentY - playerStartY;
-            
-            if (deltaY > 100) {
-              if (this.viewHistory.length > 0) {
-                const previousView = this.viewHistory.pop();
-                this.showView(previousView, true);
-              } else {
-                this.showView('home', true);
-              }
-            }
-          }, { passive: true });
-        }
       },
 
       setupPlayer() {
@@ -1844,14 +1820,6 @@
 
       mt.innerHTML = '';
       mt.textContent = data.description || '';
-
-      const detailPlayBtn = document.getElementById('detailPlayButton');
-      if (detailPlayBtn && data.tracks?.length) {
-        detailPlayBtn.onclick = null;
-        addUnifiedClickHandler(detailPlayBtn, () => {
-          App.openPlayer(data.tracks[0]);
-        });
-      }
 
       tl.innerHTML = '';
       if (data.tracks?.length) {
